force-app/main/default/objects/Enrollment__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>Used to mark when the course/session was completed by the student</description>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>