force-app/main/default/objects/Enrollment__c/fields/Course_Knowledge_Category__c.field-meta.xml
<CustomField>
    <fullName>Course_Knowledge_Category__c</fullName>
    <formula>TEXT(Course_Session__r.Knowledge_Category__c)</formula>
    <label>Course Knowledge Category</label>
    <type>Text</type>
</CustomField>