force-app/main/default/objects/Enrollment__c/fields/Course_Session__c.field-meta.xml
<CustomField>
    <fullName>Course_Session__c</fullName>
    <label>Course/Session</label>
    <referenceTo>Course_Session__c</referenceTo>
    <relationshipLabel>Enrollments</relationshipLabel>
    <relationshipName>Enrollments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>