force-app/main/default/objects/Enrollment__c/fields/Deadline__c.field-meta.xml
<CustomField>
    <fullName>Deadline__c</fullName>
    <description>Formula field based on Course End Date used to mark when the course is to be completed by the student</description>
    <formula>Course_Session__r.End__c</formula>
    <label>Deadline</label>
    <type>Date</type>
</CustomField>