force-app/main/default/objects/Enrollment__c/fields/Hours_Completed__c.field-meta.xml
<CustomField>
    <fullName>Hours_Completed__c</fullName>
    <description>If the student completed the course, fill in the # hours completed. Otherwise, leave as 0.</description>
    <formula>IF(

ISPICKVAL(Status__c, &quot;Completed&quot;),
/*if the student has completed the course*/

Course_Session__r.Course_Length_Hours__c,
/*fill in the completed hours*/

null
/*otherwise, leave as null*/
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>