force-app/main/default/objects/Enrollment__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start Date to track when students began their courses. Used especially for online courses/courses with no particular or longer date range. Not applicable to classroom style.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>