force-app/main/default/objects/Enrollment__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <label>Student</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enrollments</relationshipLabel>
    <relationshipName>Enrollments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>