force-app/main/default/objects/Enrollment__c/listViews/All_Open_Enrollments.listView-meta.xml
<ListView>
    <fullName>All_Open_Enrollments</fullName>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>Course_Session__c</columns>
    <columns>Deadline__c</columns>
    <columns>Completed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Waitlisted,Cancelled</value>
    </filters>
    <label>All Open Enrollments</label>
</ListView>